compiler/testData/diagnostics/tests/properties/localPropertyExtensions.fir.kt
// RUN_PIPELINE_TILL: SOURCE
// SKIP_TXT

fun test() {
    val <!LOCAL_EXTENSION_PROPERTY!>String<!>.count = 42
}
